[package]
name = "mmftool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mmf_parser = "0.1.2"
anyhow = { version = "^1.0", default-features = false }
pretty_env_logger = { version = "^0.4" }
byteorder = "1.0"

